--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author"
     content="shivam shandilya">
     <title>➤Shivam Shandilya -the future of indian cricket</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
 <h1>SHIVAM SHANDILYA</h1>
