--- a/for-contact.html
+++ b/for-contact.html
@@ -7,7 +7,7 @@
   <meta name="author"
     content="shivam shandilya">
     <title> HIS HOBBIES </title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
  <body>
    <h2>FOR CONTACT:-<h2>
      <form class="" action="mailto:shivamshandilya12@gmail.com"; enctype="text/plain" ;method="post">
